fix copy account number, alter inner spacing, remove failed to delete message on success, change font of messages based on language

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -227,9 +227,9 @@ html[lang="ko"] .qa-question {
 	font-weight: 300;
 }
 
-.wrapper.style3.special[data-show-lang="ko"] {
+/* .wrapper.style3.special[data-show-lang="ko"] {
 	padding: 35px 35px;
-}
+} */
 
 .names {
 	display: flex;
@@ -243,7 +243,7 @@ html[lang="ko"] .qa-question {
 
 .details-ko,
 .details-us {
-	padding: 40px 0;
+	padding: 1em 2em;
 }
 
 @media screen and (max-width: 1680px) {
@@ -3160,7 +3160,7 @@ button.reset-style {
 }
 
 .wrapper.style3 {
-	padding: 150px 0;
+	padding: 40px 0;
 	background-color: #ffffff;
 	color: #000000;
 	/* border-bottom: 1px solid #000;  */
@@ -3233,7 +3233,7 @@ button.reset-style {
 	}
 
 	.wrapper.style1 .inner {
-		padding: 0 25px;
+		padding: 40px 25px 0 25px;
 	}
 }
 
@@ -4444,9 +4444,13 @@ body.is-mobile.landing #footer {
 }
 
 /* Style for the Q&A section */
+.qa-section {
+	margin: 0 10px;
+}
+
 #qa-section {
 	margin: 0 auto;
-	padding: 6em 0 4em 0;
+	padding: 6em 10px 4em 0;
 	background-color: #ffffff;
 	color: #583B20;
 }
@@ -5223,7 +5227,6 @@ h2.text-center {
 }
 
 .dropdown-block {
-
 	margin-bottom: 1em;
 }
 
